apps/applications/listmonk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: listmonk
  namespace: listmonk
  labels:
    app: listmonk
spec:
  type: ClusterIP
  selector:
    app: listmonk
  ports:
    - name: http
      port: 80
      targetPort: 9000
      protocol: TCP
